apps/02-apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: parcial-mass
  labels:
    app: apache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd:2.4-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/local/apache2/htdocs
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
      volumes:
        - name: html
          configMap:
            name: apache-html
---
apiVersion: v1
kind: Service
metadata:
  name: apache
  namespace: parcial-mass
spec:
  type: ClusterIP
  selector:
    app: apache
  ports:
    - name: http
      port: 80
      targetPort: 80
